# shaku

shaku_derive/: Cargo.toml
shaku_derive/src/: parser.rs
shaku_derive/src/parser/: module.rs  property_from_field.rs
